added mongo persistence and numerous other changes

--- a/load/src/main/resources/template/index.html
+++ b/load/src/main/resources/template/index.html
@@ -19,27 +19,6 @@
 </head>
 <body>
 
-<!--<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>&lt;!&ndash;/.nav-collapse &ndash;&gt;
-    </div>
-</nav>-->
-
 <div class="container">
 
     <div>
@@ -54,6 +33,11 @@
                 <div class="row">
                     <div id="description" class="medium col-md-8"></div>
                     <div id="executionTime" class="text-right col-md-2"></div>
+                </div>
+                <div class="row">
+                    <div id="bullets" class="medium col-md-8">
+                        <ul id='bulletList'></ul>
+                    </div>
                 </div>
             </div>
         </div>
