--- a/load/src/main/resources/template/index.html
+++ b/load/src/main/resources/template/index.html
@@ -31,13 +31,16 @@
                     <h1>Hound Performance Report</h1>
                 </div>
                 <div class="row">
-                    <div id="description" class="medium col-md-8"></div>
+                    <div id="description" class="medium col-md-6"></div>
+                    <div class="text-right col-md-2">Start Time:</div>
                     <div id="executionTime" class="text-right col-md-2"></div>
                 </div>
                 <div class="row">
-                    <div id="bullets" class="medium col-md-8">
+                    <div id="bullets" class="medium col-md-6">
                         <ul id='bulletList'></ul>
                     </div>
+                    <div class="text-right col-md-2">Duration:</div>
+                    <div id="executionDuration" class="text-right col-md-2"></div>
                 </div>
             </div>
         </div>
@@ -77,6 +80,7 @@
                         <th>Description</th>
                         <th>Count</th>
                         <th>Percentage</th>
+                        <th></th>
                     </tr>
                 </table>
             </div>
